# cms-cls-tea

./: .gitignore  CMakeLists.txt  README.md
advection_diffusion/: advection_diffusion  main.cpp
diffusion/: CMakeLists.txt  diffusion  main.cpp
diffusion/1D/: main.cpp
diffusion/2D/: main.cpp
diffusion/Diffusion_and_Advection/: main.cpp
evaluation/: CMakeLists.txt  eval_output_analysis.ipynb  evaluation  main.cpp
include/: FD_laplacian.hpp  Gaussian.hpp  LNorms.hpp  monitor_total_mass.hpp  timesteps_stability.hpp
include/nlohmann/: json.hppZone.Identifier
level_set_method/: CMakeLists.txt  level_set_method  main.cpp
run_all_sims/: main.cpp  run_all_sims
run_all_sims/sim_params/: sim_tests.json  sim_tests_boundary_tests.json  sim_tests_vtk_data.json
tests/: CMakeLists.txt  main.cpp
